--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,5 +28,53 @@
 #       enabled: "ON"
 
 en:
+  activerecord:
+    errors:
+      models:
+        account:
+          attributes:
+            name:
+              blank: "can't be blank"
+              taken: "has already been taken"
+        user:
+          attributes:
+            name:
+              blank: "can't be blank"
+            email_address:
+              blank: "can't be blank"
+              taken: "has already been taken"
+              invalid: "is invalid"
+            first_name:
+              blank: "can't be blank"
+            last_name:
+              blank: "can't be blank"
+        property:
+          attributes:
+            name:
+              blank: "can't be blank"
+            account:
+              required: "must be associated with an account"
+        room:
+          attributes:
+            name:
+              blank: "can't be blank"
+            capacity:
+              blank: "can't be blank"
+              not_a_number: "must be a number"
+              greater_than: "must be greater than 0"
+              not_an_integer: "must be an integer"
+        reservation:
+          attributes:
+            adults:
+              blank: "can't be blank"
+              not_a_number: "must be a number"
+              greater_than_or_equal_to: "must be at least 1"
+              not_an_integer: "must be an integer"
+            children:
+              not_a_number: "must be a number"
+              greater_than_or_equal_to: "must be at least 0"
+              not_an_integer: "must be an integer"
+            deposit:
+              not_a_number: "must be a number"
+              greater_than_or_equal_to: "must be at least 0"
   hello: "Hello world"
-  sign_up_success: "Successfully signed up!"
