--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,23 @@
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
-
 en:
+  flash:
+    auth:
+      unauthorized: "Unauthorized"
+      sign_in_error: "There was an error signing in. Please try again."
+      authentication_failed: "Authentication failed. Please try again."
+      logged_out: "You have been logged out successfully."
+      already_logged_in: "Can't access this page while logged in."
+      rate_limited: "Try again later."
+    accounts:
+      already_has_account: "You already have an account."
+      created_successfully: "Account was successfully created."
+    properties:
+      created_successfully: "Property was successfully created."
+      updated_successfully: "Property was successfully updated."
+      destroyed_successfully: "Property was successfully destroyed."
+    rooms:
+      created_successfully: "Room was successfully created."
+      updated_successfully: "Room was successfully updated."
+      destroyed_successfully: "Room was successfully destroyed."
   activerecord:
     errors:
       models:
