feat: adds prices and amounts to bookings

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -12,6 +12,7 @@ bg:
         adults: "Възрастни"
         children: "Деца"
         deposit: "Депозит"
+        price: "Цена"
         notes: "Бележки"
       account:
         name: "Име"
@@ -62,6 +63,9 @@ bg:
     end_date: "Крайна дата"
     notes: "Бележки"
     deposit: "Депозит"
+    price: "Цена"
+    amount: "Дължима сума"
+    nights: "Нощувки"
     adults: "Възрастни"
     children: "Деца"
     check_in: "Настаняване"
@@ -115,6 +119,7 @@ bg:
         starts_at: "Дата на настаняване"
         ends_at: "Дата на напускане"
         deposit: "Депозит"
+        price: "Цена"
         adults: "Възрастни"
         children: "Деца"
         notes: "Бележки"
@@ -187,6 +192,9 @@ bg:
             deposit:
               not_a_number: "трябва да бъде число"
               greater_than_or_equal_to: "трябва да бъде поне 0"
+            price:
+              not_a_number: "трябва да бъде число"
+              greater_than_or_equal_to: "трябва да бъде поне 0"
   admin:
     titles:
       accounts: "Акаунти"
@@ -226,8 +234,24 @@ bg:
       day_header: "%a, %d %b %Y"
     day_names: [Неделя, Понеделник, Вторник, Сряда, Четвъртък, Петък, Събота]
     abbr_day_names: [Нед, Пон, Вто, Сря, Чет, Пет, Съб]
-    month_names: [~, Януари, Февруари, Март, Април, Май, Юни, Юли, Август, Септември, Октомври, Ноември, Декември]
-    abbr_month_names: [~, Яну, Фев, Мар, Апр, Май, Юни, Юли, Авг, Сеп, Окт, Ное, Дек]
+    month_names:
+      [
+        ~,
+        Януари,
+        Февруари,
+        Март,
+        Април,
+        Май,
+        Юни,
+        Юли,
+        Август,
+        Септември,
+        Октомври,
+        Ноември,
+        Декември,
+      ]
+    abbr_month_names:
+      [~, Яну, Фев, Мар, Апр, Май, Юни, Юли, Авг, Сеп, Окт, Ное, Дек]
     order:
       - :day
       - :month
