--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -88,6 +88,9 @@ en:
             deposit:
               not_a_number: "must be a number"
               greater_than_or_equal_to: "must be at least 0"
+            price:
+              not_a_number: "must be a number"
+              greater_than_or_equal_to: "must be at least 0"
   hello: "Hello world"
   date:
     formats:
@@ -97,8 +100,24 @@ en:
       day_header: "%a, %d %b %Y"
     day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
     abbr_day_names: [Sun, Mon, Tue, Wed, Thu, Fri, Sat]
-    month_names: [~, January, February, March, April, May, June, July, August, September, October, November, December]
-    abbr_month_names: [~, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec]
+    month_names:
+      [
+        ~,
+        January,
+        February,
+        March,
+        April,
+        May,
+        June,
+        July,
+        August,
+        September,
+        October,
+        November,
+        December,
+      ]
+    abbr_month_names:
+      [~, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec]
     order:
       - :year
       - :month
