styling and minor changes

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -64,6 +64,7 @@ bg:
     notes: "Бележки"
     deposit: "Депозит"
     price: "Цена"
+    price_per_night: "Цена на нощувка"
     amount: "Дължима сума"
     nights: "Нощувки"
     adults: "Възрастни"
