chore: change currency label

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -9,6 +9,7 @@ bg:
         room_id: "Стая"
         starts_at: "Дата на настаняване"
         ends_at: "Дата на напускане"
+        name: "Име"
         adults: "Възрастни"
         children: "Деца"
         deposit: "Депозит"
@@ -64,7 +65,7 @@ bg:
     notes: "Бележки"
     deposit: "Депозит"
     price: "Цена"
-    price_per_night: "Цена на нощувка"
+    price_per_night: "Цена на нощувка (€)"
     amount: "Дължима сума"
     nights: "Нощувки"
     adults: "Възрастни"
